objects/SetupTest__c.object
<CustomObject>
    <fields>
        <fullName>Test123__c</fullName>
        <description>cdscc</description>
        <encrypted>true</encrypted>
        <inlineHelpText>dcdscdsc</inlineHelpText>
        <label>Test123</label>
        <length>200</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>TstFor__c</fullName>
        <formula>LastModifiedDate</formula>
        <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
        <inlineHelpText>axsacsdscd</inlineHelpText>
        <label>TstFor</label>
        <type>Date</type>
    </fields>
    <fields>
        <fullName>qsw__c</fullName>
        <displayFormat>A-{0000}</displayFormat>
        <label>qsw</label>
        <type>AutoNumber</type>
    </fields>
    <label>SetupTest</label>
    <listViews>
        <fullName>All</fullName>
        <filterScope>Everything</filterScope>
        <label>All</label>
    </listViews>
    <listViews>
        <fullName>Test_Audit</fullName>
        <columns>NAME</columns>
        <filterScope>Everything</filterScope>
        <label>Test_Audit</label>
        <language>en_US</language>
        <sharedTo>
            <group>NEWTESTGROUP</group>
        </sharedTo>
    </listViews>
    <nameField>
        <label>SetupTest Name</label>
        <type>Text</type>
    </nameField>
    <pluralLabel>SetupTest</pluralLabel>
    <sharingModel>ReadWrite</sharingModel>
</CustomObject>